# Uriel

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  main.py  pyproject.toml  test_json.rs  test_orichalcum.rs  uriel.nix
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/epub/: annotator.rs  mod.rs
src-tauri/src/pdf/: mod.rs
uriel/: Cargo.toml
uriel/src/: digest.rs  gemini.rs  gemini_client.rs  gemini_file_api.rs  indexer.rs  main.rs  media_handler.rs  orichalcum_integration.rs  rag.rs  vault_io.rs
