[package]
name = "uriel"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
futures-util = "0.3.32"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["builder"] }
tokio = { version = "1.50.0", features = ["full"] }
