[package]
name = "uriel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.44"
moka = { version = "0.12.15", features = ["future"] }
orichalcum = { version = "0.4.0", features = ["llm"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["builder"] }
tokio = { version = "1.50.0", features = ["full"] }
